--- a/jainDataBase/shastra/02_चरणानुयोग/19_आत्मानुशासन--आ-गुणभद्र/html/055.html
+++ b/jainDataBase/shastra/02_चरणानुयोग/19_आत्मानुशासन--आ-गुणभद्र/html/055.html
@@ -44,7 +44,7 @@
         $('select option:odd').css({'color': 'blue'})
       </style>
     </head>
-    <body oncopy="return false" onpaste="return false" oncut="return false">
+    <body>
     <a href='054.html' rel=external style='float: left'><img src='../../../../../images/common/prev.jpg' height=50 width=50/></a><a href='056.html' rel=external style='float: right'><img src='../../../../../images/common/next.jpg' height=50 width=50/></a><div style='text-align: center'><a href='../../../../../index.html' rel=external><img src='../../../../../images/jain-saint.jpg' width=8%></img></a></div>  <div data-role='navbar'>
     <ul>
 
@@ -58,7 +58,8 @@
     <br><div class=title id=gatha-055><span class=incFontSz>+ </span><a href=#index>
 तृष्णा से उत्पन्न दुःख का वर्णन </a><span class=decFontSz> -</span></div>
    <div class=gatha>उग्रग्रीष्मकठोरधर्मकिरणस्फूर्जद्गभस्तिप्रभैः <br>संतप्तः सकलेन्द्रियैरयमहो संवृद्धतृष्णो जनः। <br>अप्राप्याभिमतं विवेकविमुखः पापप्रयासाकुल-<br>स्तोयोपान्तदुरन्तकर्दमगतक्षीणोक्षयत् क्लिश्यते॥५५॥</div>
-    <div class=paragraph><b><font color=darkmagenta>अन्वयार्थ : </font></b>तीक्ष्ण ग्रीष्म काल के कठोर सूर्य की दैदीप्यमान किरणों की प्रभा के समान संताप को उत्पन्न करने वाली समस्त इन्द्रियों से संतप्त होकर यह प्राणी वृद्धिंगत विषयतृष्णा से युक्त होता हुआ विवेक को नष्ट कर देता है और फिर इसीलिये अभीष्ट विषयों को प्राप्त करने के लिये वह पापाचारम प्रवृत्त होकर व्याकुल होता है। परंतु जब उसे वे अभीष्ट विषय नहीं प्राप्त होते हैं तब वह इस प्रकार से क्लेश को प्राप्त होता है जिस प्रकार कि प्यास से पीडित होकर पानी के निकट अगाध कीचड में फंसा हुआ निर्बल बैल क्लेश को प्राप्त होता है ॥५५॥</div>
+    <div class=paragraph><b><font color=darkmagenta>अन्वयार्थ : </font></b>तीक्ष्ण ग्रीष्म काल के कठोर सूर्य की दैदीप्यमान किरणों की प्रभा के समान संताप को उत्पन्न करने वाली समस्त इन्द्रियों से संतप्त होकर यह प्राणी वृद्धिंगत विषयतृष्णा से युक्त होता हुआ विवेक को नष्ट कर देता है और फिर इसीलिये अभीष्ट विषयों को प्राप्त करने के लिये वह पापाचार में प्रवृत्त होकर व्याकुल होता है। परंतु जब उसे वे अभीष्ट विषय नहीं प्राप्त होते हैं तब वह इस प्रकार से क्लेश को प्राप्त होता है जिस प्रकार कि प्यास से पीडित होकर पानी के निकट अगाध कीचड में फंसा हुआ निर्बल बैल क्लेश को प्राप्त होता है ॥५५॥</div>
+<div class=paragraph></div>
     <div class=paragraphE><b><font color=darkmagenta>Meaning : </font></b>Anguished, as if by the scorching and blinding rays of the<br>unrelenting summer sun, by the senses, and athirst for<br>sense-pleasures, the man loses his sense of<br>discrimination. As he gets anguished seeking the desired<br>pleasures, he engages himself in sinful activities. His<br>anguish on not getting hold of the desired pleasures is<br>akin to the anguish of the powerless ox who, thirsty for<br>water, gets entrapped in the deep mire at the edge of a<br>piece of water.</div>
   <br><div class=teekakaar>
     <span onclick='toggleTeeka("0")' class=teeka0>&nbsp;&nbsp;भावार्थ</span>&nbsp;
