--- a/jainDataBase/gatha/02_चरणानुयोग/19_आत्मानुशासन--आ-गुणभद्र/html/index.html
+++ b/jainDataBase/gatha/02_चरणानुयोग/19_आत्मानुशासन--आ-गुणभद्र/html/index.html
@@ -46,7 +46,7 @@
     }
   </style>
 </head>
-<body oncopy="return false" onpaste="return false" oncut="return false">
+<body>
 <div align=center><a href='../../../../../index.html'><img src='../../../../../images/jain-saint.jpg' height=270 width=300></img><figcaption>Click Here</figcaption></a></div>
 <br><br><br>
 <div class=hdr1 align=center>आत्मानुशासन</div>
@@ -61,7 +61,7 @@
 <div align=right><b><font size=20>- आ-गुणभद्र</font></b></div>
 <br><br><br><font size=2 color=darkRed>
 <div align=right>nikkyjain@gmail.com</div>
-<div align=right>Date : 17-Nov-2022</font></div><br><br><div class=adhikaar id=index><h1>Index</h1></div><br>
+<div align=right>Date : 14-Apr-2025</font></div><br><br><div class=adhikaar id=index><h1>Index</h1></div><br>
 <div align=center><img src='../../../../../images/brownOm.png' width='5%'></img></div>
     <table align=center width=90% class=mainIndex>
 <tr><th>गाथा / सूत्र<th>विषय</tr>
@@ -505,7 +505,8 @@
 <div class=paragraph><b><font color=darkmagenta>अन्वयार्थ : </font></b>हे बार बार जन्म को धारण करनेवाले प्राणी! तू उत्पन्न हुआ है; वात-पित्तादि दोषों, रस-रुधिरादि सात धातुओं एवं मल-मूत्रादि से सहित शरीर का धारक है; क्रोधादि कषायों से सहित है; आधि <span class=comment>(मानसिक पीडा)</span> और व्याधि <span class=comment>(शारीरिक पीडा)</span> से पीडित है, दुश्चरित्र है, अपने आप को धोका देनेवाला है, मृत्यु के द्वारा फैलाये गये मुख के मध्य में स्थित अर्थात् मरणोन्मुख है, तथा जरा <span class=comment>(बुढापा)</span> का ग्रास बनने वाला है। फिर ये अज्ञानी प्राणी! यह समझ में नहीं आता कि तू उन्मत्त होकर अपने ही हित का शत्रु <span class=comment>(घातक)</span> होता हुआ उन अहितकारक विषयों की अभिलाषा क्यों करता है? ॥५४॥</div><hr class=type_7>
 <a href='#home' class=index>&#x1f3e0;</a>
 <br><div class=title id=gatha-055><span class=incFontSz>+ </span><a href=#index>तृष्णा से उत्पन्न दुःख का वर्णन </a><span class=decFontSz> -</span></div><div class=gatha>उग्रग्रीष्मकठोरधर्मकिरणस्फूर्जद्गभस्तिप्रभैः <br>संतप्तः सकलेन्द्रियैरयमहो संवृद्धतृष्णो जनः। <br>अप्राप्याभिमतं विवेकविमुखः पापप्रयासाकुल-<br>स्तोयोपान्तदुरन्तकर्दमगतक्षीणोक्षयत् क्लिश्यते॥५५॥</div>
-<div class=paragraph><b><font color=darkmagenta>अन्वयार्थ : </font></b>तीक्ष्ण ग्रीष्म काल के कठोर सूर्य की दैदीप्यमान किरणों की प्रभा के समान संताप को उत्पन्न करने वाली समस्त इन्द्रियों से संतप्त होकर यह प्राणी वृद्धिंगत विषयतृष्णा से युक्त होता हुआ विवेक को नष्ट कर देता है और फिर इसीलिये अभीष्ट विषयों को प्राप्त करने के लिये वह पापाचारम प्रवृत्त होकर व्याकुल होता है। परंतु जब उसे वे अभीष्ट विषय नहीं प्राप्त होते हैं तब वह इस प्रकार से क्लेश को प्राप्त होता है जिस प्रकार कि प्यास से पीडित होकर पानी के निकट अगाध कीचड में फंसा हुआ निर्बल बैल क्लेश को प्राप्त होता है ॥५५॥</div><hr class=type_7>
+<div class=paragraph><b><font color=darkmagenta>अन्वयार्थ : </font></b>तीक्ष्ण ग्रीष्म काल के कठोर सूर्य की दैदीप्यमान किरणों की प्रभा के समान संताप को उत्पन्न करने वाली समस्त इन्द्रियों से संतप्त होकर यह प्राणी वृद्धिंगत विषयतृष्णा से युक्त होता हुआ विवेक को नष्ट कर देता है और फिर इसीलिये अभीष्ट विषयों को प्राप्त करने के लिये वह पापाचार में प्रवृत्त होकर व्याकुल होता है। परंतु जब उसे वे अभीष्ट विषय नहीं प्राप्त होते हैं तब वह इस प्रकार से क्लेश को प्राप्त होता है जिस प्रकार कि प्यास से पीडित होकर पानी के निकट अगाध कीचड में फंसा हुआ निर्बल बैल क्लेश को प्राप्त होता है ॥५५॥</div>
+<div class=paragraph></div><hr class=type_7>
 <a href='#home' class=index>&#x1f3e0;</a>
 <br><div class=title id=gatha-056><span class=incFontSz>+ </span><a href=#index>मोहरूपी अग्नि की विशेषता</a><span class=decFontSz> -</span></div><div class=gatha>लब्धेन्धनो ज्वलत्यग्निः प्रशाम्यति निरिन्धनः ।<br>ज्वलत्युभयथाप्युच्चैरहो मोहाग्निरुत्कटः॥५६॥</div>
 <div class=paragraph><b><font color=darkmagenta>अन्वयार्थ : </font></b>अग्नि इन्धन को पाकर जलती है और उससे रहित होकर बुझ जाती है। परंतु आश्चर्य है कि तीव्र मोहरूपी अग्नि दोनों भी प्रकार से ऊंची <span class=comment>(अतिशय)</span> जलती है ॥५६॥</div><hr class=type_7>
