updated Pooja Path for MB

--- a/index.html
+++ b/index.html
@@ -3275,7 +3275,7 @@ $(document).on( "pagecontainershow", function(){
         <h2>पाठ</h2>
         <ul data-role=listview>
           <li data-theme=b><a data-ajax=false href=./jainDataBase/poojas/06_पाठ/01_देव-स्तुति--पण्डित-भूधरदास/html/index.html>1) देव-स्तुति--पण्डित-भूधरदास</a></li>
-          <li data-theme=b><a data-ajax=false href=./jainDataBase/poojas/06_पाठ/02_मेरी-भावना--पण्डित-जुगलकिशोर जी 'मुख्तार'/html/index.html>2) मेरी-भावना--पण्डित-जुगलकिशोर जी 'मुख्तार'</a></li>
+          <li data-theme=b><a data-ajax=false href=./jainDataBase/poojas/06_पाठ/02_मेरी-भावना--पण्डित-जुगलकिशोर/html/index.html>2) मेरी-भावना--पण्डित-जुगलकिशोर जी 'मुख्तार'</a></li>
           <li data-theme=b><a data-ajax=false href=./jainDataBase/poojas/06_पाठ/03_बारह-भावना--पण्डित-जयचंद-छाबडा/html/index.html>3) बारह-भावना--पण्डित-जयचंद-छाबडा</a></li>
           <li data-theme=b><a data-ajax=false href=./jainDataBase/poojas/06_पाठ/04_बारह-भावना--पण्डित-भूधरदास/html/index.html>4) बारह-भावना--पण्डित-भूधरदास</a></li>
           <li data-theme=b><a data-ajax=false href=./jainDataBase/poojas/06_पाठ/05_बारह-भावना--पण्डित.-मंगतराय/html/index.html>5) बारह-भावना--पण्डित.-मंगतराय</a></li>
