--- a/index.html
+++ b/index.html
@@ -1500,7 +1500,7 @@ $(document).on( "pagecontainershow", function(){
           <li data-theme=b><a data-ajax=false href=./jainDataBase/poojas/05_विसर्जन/07_भगवान-आदिनाथ-चालीसा/html/index.html>7) भगवान-आदिनाथ-चालीसा</a></li>
           <li data-theme=b><a data-ajax=false href=./jainDataBase/poojas/05_विसर्जन/08_भगवान-महावीर-चालीसा/html/index.html>8) भगवान-महावीर-चालीसा</a></li>
           <li data-theme=b><a data-ajax=false href=./jainDataBase/poojas/06_पाठ/01_देव-स्तुति--पण्डित-भूधरदास/html/index.html>1) देव-स्तुति--पण्डित-भूधरदास</a></li>
-          <li data-theme=b><a data-ajax=false href=./jainDataBase/poojas/06_पाठ/02_मेरी-भावना--पण्डित-जुगलकिशोर जी 'मुख्तार'/html/index.html>2) मेरी-भावना--पण्डित-जुगलकिशोर जी 'मुख्तार'</a></li>
+          <li data-theme=b><a data-ajax=false href=./jainDataBase/poojas/06_पाठ/02_मेरी-भावना--पण्डित-जुगलकिशोर/html/index.html>2) मेरी-भावना--पण्डित-जुगलकिशोर</a></li>
           <li data-theme=b><a data-ajax=false href=./jainDataBase/poojas/06_पाठ/03_बारह-भावना--पण्डित-जयचंद-छाबडा/html/index.html>3) बारह-भावना--पण्डित-जयचंद-छाबडा</a></li>
           <li data-theme=b><a data-ajax=false href=./jainDataBase/poojas/06_पाठ/04_बारह-भावना--पण्डित-भूधरदास/html/index.html>4) बारह-भावना--पण्डित-भूधरदास</a></li>
           <li data-theme=b><a data-ajax=false href=./jainDataBase/poojas/06_पाठ/05_बारह-भावना--पण्डित.-मंगतराय/html/index.html>5) बारह-भावना--पण्डित.-मंगतराय</a></li>
@@ -1566,7 +1566,7 @@ $(document).on( "pagecontainershow", function(){
           <li data-theme=b><a data-ajax=false href=./jainDataBase/poojas/11_आरती/06_भगवान-बाहुबली-आरती/html/index.html>5) भगवान-बाहुबली-आरती</a></li>
           <li data-theme=b><a data-ajax=false href=./jainDataBase/teeka/01_द्रव्यानुयोग/01_समयसार--कुन्दकुन्दाचार्य/html/index.html>1) समयसार--कुन्दकुन्दाचार्य</a></li>
           <li data-theme=b><a data-ajax=false href=./jainDataBase/teeka/01_द्रव्यानुयोग/02_प्रवचनसार--कुन्दकुन्दाचार्य/html/index.html>2) प्रवचनसार--कुन्दकुन्दाचार्य</a></li>
-          <li data-theme=b><a data-ajax=false href=./jainDataBase/teeka/01_द्रव्यानुयोग/05_पन्चास्तिकाय--कुन्दकुन्दाचार्य/html/index.html>3) पन्चास्तिकाय--कुन्दकुन्दाचार्य</a></li>
+          <li data-theme=b><a data-ajax=false href=./jainDataBase/teeka/01_द्रव्यानुयोग/05_पञ्चास्तिकाय--कुन्दकुन्दाचार्य/html/index.html>3) पञ्चास्तिकाय--कुन्दकुन्दाचार्य</a></li>
           <li data-theme=b><a data-ajax=false href=./jainDataBase/teeka/01_द्रव्यानुयोग/06_द्रव्यसंग्रह--नेमिचंद्र-सिद्धांतचक्रवर्ती/html/index.html>4) द्रव्यसंग्रह--नेमिचंद्र-सिद्धांतचक्रवर्ती</a></li>
           <li data-theme=b><a data-ajax=false href=./jainDataBase/teeka/01_द्रव्यानुयोग/07_समाधितन्त्र--आचार्य‌-पूज्यपाद/html/index.html>5) समाधितन्त्र--आचार्य‌-पूज्यपाद</a></li>
           <li data-theme=b><a data-ajax=false href=./jainDataBase/teeka/01_द्रव्यानुयोग/08_स्वरूप-संबोधन--अकलंक-देव/html/index.html>6) स्वरूप-संबोधन--अकलंक-देव</a></li>
@@ -3275,7 +3275,7 @@ $(document).on( "pagecontainershow", function(){
         <h2>पाठ</h2>
         <ul data-role=listview>
           <li data-theme=b><a data-ajax=false href=./jainDataBase/poojas/06_पाठ/01_देव-स्तुति--पण्डित-भूधरदास/html/index.html>1) देव-स्तुति--पण्डित-भूधरदास</a></li>
-          <li data-theme=b><a data-ajax=false href=./jainDataBase/poojas/06_पाठ/02_मेरी-भावना--पण्डित-जुगलकिशोर/html/index.html>2) मेरी-भावना--पण्डित-जुगलकिशोर जी 'मुख्तार'</a></li>
+          <li data-theme=b><a data-ajax=false href=./jainDataBase/poojas/06_पाठ/02_मेरी-भावना--पण्डित-जुगलकिशोर/html/index.html>2) मेरी-भावना--पण्डित-जुगलकिशोर</a></li>
           <li data-theme=b><a data-ajax=false href=./jainDataBase/poojas/06_पाठ/03_बारह-भावना--पण्डित-जयचंद-छाबडा/html/index.html>3) बारह-भावना--पण्डित-जयचंद-छाबडा</a></li>
           <li data-theme=b><a data-ajax=false href=./jainDataBase/poojas/06_पाठ/04_बारह-भावना--पण्डित-भूधरदास/html/index.html>4) बारह-भावना--पण्डित-भूधरदास</a></li>
           <li data-theme=b><a data-ajax=false href=./jainDataBase/poojas/06_पाठ/05_बारह-भावना--पण्डित.-मंगतराय/html/index.html>5) बारह-भावना--पण्डित.-मंगतराय</a></li>
@@ -3372,7 +3372,7 @@ $(document).on( "pagecontainershow", function(){
         <ul data-role=listview>
           <li data-theme=b><a data-ajax=false href=./jainDataBase/gatha/01_द्रव्यानुयोग/01_समयसार--कुन्दकुन्दाचार्य/html/index.html>1) समयसार--कुन्दकुन्दाचार्य</a></li>
           <li data-theme=b><a data-ajax=false href=./jainDataBase/gatha/01_द्रव्यानुयोग/02_प्रवचनसार--कुन्दकुन्दाचार्य/html/index.html>2) प्रवचनसार--कुन्दकुन्दाचार्य</a></li>
-          <li data-theme=b><a data-ajax=false href=./jainDataBase/gatha/01_द्रव्यानुयोग/05_पन्चास्तिकाय--कुन्दकुन्दाचार्य/html/index.html>3) पन्चास्तिकाय--कुन्दकुन्दाचार्य</a></li>
+          <li data-theme=b><a data-ajax=false href=./jainDataBase/gatha/01_द्रव्यानुयोग/05_पञ्चास्तिकाय--कुन्दकुन्दाचार्य/html/index.html>3) पञ्चास्तिकाय--कुन्दकुन्दाचार्य</a></li>
           <li data-theme=b><a data-ajax=false href=./jainDataBase/gatha/01_द्रव्यानुयोग/06_द्रव्यसंग्रह--नेमिचंद्र-सिद्धांतचक्रवर्ती/html/index.html>4) द्रव्यसंग्रह--नेमिचंद्र-सिद्धांतचक्रवर्ती</a></li>
           <li data-theme=b><a data-ajax=false href=./jainDataBase/gatha/01_द्रव्यानुयोग/07_समाधितन्त्र--आचार्य‌-पूज्यपाद/html/index.html>5) समाधितन्त्र--आचार्य‌-पूज्यपाद</a></li>
           <li data-theme=b><a data-ajax=false href=./jainDataBase/gatha/01_द्रव्यानुयोग/08_स्वरूप-संबोधन--अकलंक-देव/html/index.html>6) स्वरूप-संबोधन--अकलंक-देव</a></li>
@@ -3526,7 +3526,7 @@ $(document).on( "pagecontainershow", function(){
         <ul data-role=listview>
           <li data-theme=b><a data-ajax=false href=./jainDataBase/teeka/01_द्रव्यानुयोग/01_समयसार--कुन्दकुन्दाचार्य/html/index.html>1) समयसार--कुन्दकुन्दाचार्य</a></li>
           <li data-theme=b><a data-ajax=false href=./jainDataBase/teeka/01_द्रव्यानुयोग/02_प्रवचनसार--कुन्दकुन्दाचार्य/html/index.html>2) प्रवचनसार--कुन्दकुन्दाचार्य</a></li>
-          <li data-theme=b><a data-ajax=false href=./jainDataBase/teeka/01_द्रव्यानुयोग/05_पन्चास्तिकाय--कुन्दकुन्दाचार्य/html/index.html>3) पन्चास्तिकाय--कुन्दकुन्दाचार्य</a></li>
+          <li data-theme=b><a data-ajax=false href=./jainDataBase/teeka/01_द्रव्यानुयोग/05_पञ्चास्तिकाय--कुन्दकुन्दाचार्य/html/index.html>3) पञ्चास्तिकाय--कुन्दकुन्दाचार्य</a></li>
           <li data-theme=b><a data-ajax=false href=./jainDataBase/teeka/01_द्रव्यानुयोग/06_द्रव्यसंग्रह--नेमिचंद्र-सिद्धांतचक्रवर्ती/html/index.html>4) द्रव्यसंग्रह--नेमिचंद्र-सिद्धांतचक्रवर्ती</a></li>
           <li data-theme=b><a data-ajax=false href=./jainDataBase/teeka/01_द्रव्यानुयोग/07_समाधितन्त्र--आचार्य‌-पूज्यपाद/html/index.html>5) समाधितन्त्र--आचार्य‌-पूज्यपाद</a></li>
           <li data-theme=b><a data-ajax=false href=./jainDataBase/teeka/01_द्रव्यानुयोग/08_स्वरूप-संबोधन--अकलंक-देव/html/index.html>6) स्वरूप-संबोधन--अकलंक-देव</a></li>
@@ -3628,7 +3628,7 @@ $(document).on( "pagecontainershow", function(){
         <ul data-role=listview>
           <li data-theme=b><a data-ajax=false href=./jainDataBase/shastra/01_द्रव्यानुयोग/01_समयसार--कुन्दकुन्दाचार्य/html/index.html>1) समयसार--कुन्दकुन्दाचार्य</a></li>
           <li data-theme=b><a data-ajax=false href=./jainDataBase/shastra/01_द्रव्यानुयोग/02_प्रवचनसार--कुन्दकुन्दाचार्य/html/index.html>2) प्रवचनसार--कुन्दकुन्दाचार्य</a></li>
-          <li data-theme=b><a data-ajax=false href=./jainDataBase/shastra/01_द्रव्यानुयोग/05_पन्चास्तिकाय--कुन्दकुन्दाचार्य/html/index.html>3) पन्चास्तिकाय--कुन्दकुन्दाचार्य</a></li>
+          <li data-theme=b><a data-ajax=false href=./jainDataBase/shastra/01_द्रव्यानुयोग/05_पञ्चास्तिकाय--कुन्दकुन्दाचार्य/html/index.html>3) पञ्चास्तिकाय--कुन्दकुन्दाचार्य</a></li>
           <li data-theme=b><a data-ajax=false href=./jainDataBase/shastra/01_द्रव्यानुयोग/06_द्रव्यसंग्रह--नेमिचंद्र-सिद्धांतचक्रवर्ती/html/index.html>4) द्रव्यसंग्रह--नेमिचंद्र-सिद्धांतचक्रवर्ती</a></li>
           <li data-theme=b><a data-ajax=false href=./jainDataBase/shastra/01_द्रव्यानुयोग/07_समाधितन्त्र--आचार्य‌-पूज्यपाद/html/index.html>5) समाधितन्त्र--आचार्य‌-पूज्यपाद</a></li>
           <li data-theme=b><a data-ajax=false href=./jainDataBase/shastra/01_द्रव्यानुयोग/08_स्वरूप-संबोधन--अकलंक-देव/html/index.html>6) स्वरूप-संबोधन--अकलंक-देव</a></li>
